# ScrollFFmpegDemo

app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  CallBack.cpp  CallBack.h  Decode.cpp  Decode.h  MyQueue.h  native-lib.cpp
app/src/main/java/com/example/scrollffmpegdemo/: MainActivity.java  MyRenderer.java  PlayerView.java
app/src/main/java/com/example/scrollffmpegdemo/data/: VertexArray.java
app/src/main/java/com/example/scrollffmpegdemo/objects/: PlayerObj.java
app/src/main/java/com/example/scrollffmpegdemo/playerif/: OnCallPrepare.java
app/src/main/java/com/example/scrollffmpegdemo/programs/: PlayerProgram.java  ShaderProgram.java
app/src/main/java/com/example/scrollffmpegdemo/utils/: Geometry.java  MatrixHelper.java  RandomTagPoint.java  ShaderHelper.java  TextRecourseReader.java  TextureHelper.java  YUVHelper.java
app/src/main/res/drawable-anydpi/: fill.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/raw/: yuv_frag_shader.glsl  yuv_vertex_shader.glsl
app/src/main/res/values/: strings.xml
